# iguana

./: .clang-format  .clang-format-ignore  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CODEOWNERS  Doxyfile  README.md  configure.py  install.rb  install.sh  meson.build  meson.format  meson.options
bind/fortran/: bind.f03  iguana-example-fortran-01-bank-rows.F  iguana-example-fortran.f03  meson.build
bind/python/: README.md  iguana-example-00-basic.py  iguana-example-01-bank-rows.py  iguana-example-02-hipopy.py  iguana-example-bank-rows.py  iguana-example-basic.py  iguana-example-bind.py  iguana-example-hipopy.py  iguana-python-example.py  iguana_ex_python_00_run_functions.py  iguana_ex_python_01_action_functions.py  iguana_ex_python_hipopy.py  meson.build  requirements.txt
bind/python/PyIguana/: AlgorithmSequence.py
bind/python/pyiguana/: __init__.py
examples/: .gitignore  README.md  iguana-example-00-basic.cc  iguana-example-01-bank-rows.cc  iguana-example-02-YAMLReader.cc  iguana-example-02-bank-rows-from-INIConfig.cc  iguana-example-02-config-files.cc  iguana-example-02-data-frames.cc  iguana-example-02-dataframes.cc  iguana-example-03-config-files.cc  iguana-example-03-zvertex-filter.cc  iguana-example-04-photon-ML.cc  iguana-example-bank-rows.cc  iguana-example-basic.cc  iguana-example-config-files.cc  iguana-example-dataframes.cc  iguana-example-fortran.f  iguana-example-fortran.f03  iguanaROOT.C  iguana_ex_cpp_00_run_functions.cc  iguana_ex_cpp_00_run_functions_with_banks.cc  iguana_ex_cpp_01_action_functions.cc  iguana_ex_cpp_ROOT_macro.C  iguana_ex_cpp_config_files.cc  iguana_ex_cpp_dataframes.cc  iguana_ex_fortran_01_action_functions.f  iguana_ex_python_00_run_functions.py  iguana_ex_python_01_action_functions.py  iguana_example_ROOT_macro.C  meson.build
examples/build_with_cmake/: CMakeLists.txt  README.md  iguana-example-00-basic.cc  iguana-example-basic.cc
examples/build_with_make/: Makefile  README.md  iguana_ex_cpp_00_run_functions.cc  test.sh
examples/build_with_meson/: 00-basic.cc  README.md  meson.build  test.sh
examples/config/: ex2.yaml  my_combined_config_file.yaml  my_z_vertex_cuts.yaml
examples/config/examples/: config_for_examples.yaml  my_combined_config_file.yaml  my_z_vertex_cuts.yaml
examples/config/my_config_directory/algorithms/clas12/: ZVertexFilter.yaml
examples/config_files/: ex2.ini  ex2.toml  ex2.yaml  ex2_old.ini  output.ini
src/algorithms/: AlgorithmFactory.cc  AlgorithmFactory.h  AlgorithmSequence.cc  AlgorithmSequence.h  meson.build
src/algorithms/clas12/: EventBuilderFilter.cc  LorentzTransformer.cc
src/algorithms/clas12/event_builder_filter/: EventBuilderFilter.cc  EventBuilderFilter.h  README.md
src/algorithms/clas12/fiducial_cuts/: FiducialCuts.cc  FiducialCuts.h  meson.build
src/algorithms/clas12/lorentz_transformer/: LorentzTransformer.cc  LorentzTransformer.h
src/algorithms/clas12/momentum_corrections/: README.md
src/algorithms/clas12/pid_refinement/: README.md
src/algos/clas12/fiducial_cuts/: FiducialCuts.cc  FiducialCuts.h  README.md  meson.build
src/chameleon/: README.md  chameleon  generate  generate.rb  meson.build
src/chameleon/src/: Bindings_c.rb  Chameleon.rb  bind_c.rb  chameleon.rb  generator.rb
src/iguana/: Algorithm.h  AlgorithmSequence.cc  AlgorithmSequence.h  Arbiter.cc  Arbiter.h  Iguana.cc  Iguana.h  meson.build
src/iguana/algorithms/: Algorithm.cc  Algorithm.h  AlgorithmBindings.cc  AlgorithmBindings.f03  AlgorithmBindings.h  AlgorithmBoilerplate.h  AlgorithmFactory.cc  AlgorithmFactory.h  AlgorithmSequence.cc  AlgorithmSequence.h  BankDefs.h  Bindings.cc  Bindings.f03  Bindings.h  Docstrings.h  LeptonID.cc  LeptonID.h  README.md  Tools.cc  Tools.h  TypeDefs.h  Validator.cc  Validator.h  ValidatorBoilerplate.h  ValidatorFactory.cc  meson.build
src/iguana/algorithms/clas12/: EventBuilderFilter.cc  EventBuilderFilter.h  EventBuilderFilter.yaml  EventBuilderFilterBindings.cc  EventBuilderFilterBindings.f03  FTEnergyCorrection.cc  FTEnergyCorrection.h  FT_Energy_Corr.cc  FT_Energy_Corr.h  LeptonID.yaml  LorentzTransformer.cc  LorentzTransformer.h  LorentzTransformer.yaml  MomentumCorrection.cc  MomentumCorrection.h  MomentumCorrectionBindings.cc  MomentumCorrectionValidator.cc  MomentumCorrectionValidator.h  PhotonGBTFilter.cc  PhotonGBTFilter.h  PhotonGBTFilter.yaml  PhotonGBTFilterValidator.cc  PhotonGBTFilterValidator.h  README.md  SectorFinder.cc  SectorFinder.h  SectorFinder.yaml  ZVertexFilter.cc  ZVertexFilter.h  ZVertexFilter.yaml  ZVertexFilterBindings.cc
src/iguana/algorithms/clas12/QADB/: Action.yaml  (+3 more)
src/iguana/algorithms/example/: ExampleAlgorithm.cc  ExampleAlgorithm.h  ExampleAlgorithm.yaml  README.md  make_template.sh
src/iguana/algorithms/physics/: InclusiveKinematics.cc  InclusiveKinematics.h  InclusiveKinematics.yaml  InclusiveKinematicsBindings.cc  InclusiveKinematicsValidator.cc  InclusiveKinematicsValidator.h  Tools.cc  Tools.h
src/iguana/bankdefs/: README.md  bank_def_gen.py  bankgen.py  generate.py  iguana.json  iguana_banks.json  meson.build
src/iguana/bindings/: Bindings.h  meson.build
src/iguana/services/: ConcurrentParam.cc  ConcurrentParam.h  ConfigFileManager.cc  ConfigFileManager.h  ConfigFileReader.cc  ConfigFileReader.h  DataFileReader.cc  DataFileReader.h  Deprecated.cc  Deprecated.h  GlobalParam.cc  GlobalParam.h  INIReader.cc  INIReader.h  Logger.cc  Logger.h  LoggerMacros.h  NewLogger.h  Object.cc  Object.h  RCDBReader.cc  RCDBReader.h  Tools.cc  Tools.h  TypeDefs.h  YAMLReader.cc  YAMLReader.h  meson.build
src/iguana/tests/: algo_check.rb  iguana-test.cc  iguana_test.cc  meson.build
src/iguana/tests/config/: test_1.yaml  test_2.yaml  test_3.yaml
src/iguana/tests/include/: TestAlgorithm.h  TestBanklist.h  TestConfig.h  TestLogger.h  TestMultithreading.h  TestValidator.h
src/services/: Algorithm.cc  Algorithm.h  Logger.cc  Logger.h  Object.cc  Object.h  TypeDefs.h  meson.build
src/tests/: main.cc  meson.build  run_banks.cc  run_rows.cc
subprojects/rcdb/: getenv_rcdb_home.sh  meson.build  meson.options
(+238 files in other folders)
